responsive utilities syntax changed

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -46,12 +46,12 @@
         <script>document.body.className='js';</script>
         {% include metamenu.html %}
         <div class="wrapper flx m-t-10">
-            <nav id="menu" class="w-1-1 l--w-1-5 m-t-7 flx-2 l--flx-1">
+            <nav id="menu" class="w-1-1 l:w-1-5 m-t-7 flx-2 l:flx-1">
                 <div yoi-sticky="not:small,medium;start:20;">{% include menu.html %}</div>
             </nav>
-            <article class="article w-1-1 l--w-4-5 l--p-l-10 flx-1 l--flx-2">
+            <article class="article w-1-1 l:w-4-5 l:p-l-10 flx-1 l:flx-2">
                 {% if page.status %}
-                    <div class="x m-t-4 m--pos-tr m--m-4 m--m-t-10">
+                    <div class="x m-t-4 m:pos-tr m:m-4 m:m-t-10">
                         {% for status in page.status %}
                             {% if status == 'issues' %}
                                 <span class="badge badge--negative" yoi-tooltip="target:#tooltip-issues; staticPosition:bottom;">{{ status }}</span>
