--- a/src/less/utilities/border-responsive.less
+++ b/src/less/utilities/border-responsive.less
@@ -2,17 +2,17 @@
 
 .responsive-b(@bpPrefix) {
 
-    .@{bpPrefix}--b-all { .b-all; }
-    .@{bpPrefix}--b-t   { .b-t; }
-    .@{bpPrefix}--b-r   { .b-r; }
-    .@{bpPrefix}--b-b   { .b-b; }
-    .@{bpPrefix}--b-l   { .b-l; }
+    .@{bpPrefix}\:b-all { .b-all; }
+    .@{bpPrefix}\:b-t   { .b-t; }
+    .@{bpPrefix}\:b-r   { .b-r; }
+    .@{bpPrefix}\:b-b   { .b-b; }
+    .@{bpPrefix}\:b-l   { .b-l; }
 
-    .@{bpPrefix}--b-0   { .b-0; }
-    .@{bpPrefix}--b-t-0 { .b-t-0; }
-    .@{bpPrefix}--b-r-0 { .b-r-0; }
-    .@{bpPrefix}--b-b-0 { .b-b-0; }
-    .@{bpPrefix}--b-l-0 { .b-l-0; }
+    .@{bpPrefix}\:b-0   { .b-0; }
+    .@{bpPrefix}\:b-t-0 { .b-t-0; }
+    .@{bpPrefix}\:b-r-0 { .b-r-0; }
+    .@{bpPrefix}\:b-b-0 { .b-b-0; }
+    .@{bpPrefix}\:b-l-0 { .b-l-0; }
 
 }
 
