--- a/src/less/utilities/grid-responsive.less
+++ b/src/less/utilities/grid-responsive.less
@@ -2,51 +2,51 @@
 
 .responsive-flx(@bpPrefix) {
     
-    .@{bpPrefix}--flx             { .flx; }
-    .@{bpPrefix}--flx-wrap        { .flx-wrap; }
-    .@{bpPrefix}--flx-noWrap      { .flx-noWrap; }
-    .@{bpPrefix}--flx-wrapReverse { .flx-wrapReverse; }
+    .@{bpPrefix}\:flx             { .flx; }
+    .@{bpPrefix}\:flx-wrap        { .flx-wrap; }
+    .@{bpPrefix}\:flx-noWrap      { .flx-noWrap; }
+    .@{bpPrefix}\:flx-wrapReverse { .flx-wrapReverse; }
                               
-    .@{bpPrefix}--flx-directionRow           { .flx-directionRow; }
-    .@{bpPrefix}--flx-directionRowReverse    { .flx-directionRowReverse; }
-    .@{bpPrefix}--flx-directionColumn        { .flx-directionColumn; }
-    .@{bpPrefix}--flx-directionColumnReverse { .flx-directionColumnReverse; }
+    .@{bpPrefix}\:flx-directionRow           { .flx-directionRow; }
+    .@{bpPrefix}\:flx-directionRowReverse    { .flx-directionRowReverse; }
+    .@{bpPrefix}\:flx-directionColumn        { .flx-directionColumn; }
+    .@{bpPrefix}\:flx-directionColumnReverse { .flx-directionColumnReverse; }
 
-    .@{bpPrefix}--flx-alignStart        { .flx-alignStart; }
-    .@{bpPrefix}--flx-alignEnd          { .flx-alignEnd; }
-    .@{bpPrefix}--flx-alignCenter       { .flx-alignCenter; }
-    .@{bpPrefix}--flx-alignBaseline     { .flx-alignBaseline; }
-    .@{bpPrefix}--flx-alignStretch      { .flx-alignStretch; }
+    .@{bpPrefix}\:flx-alignStart        { .flx-alignStart; }
+    .@{bpPrefix}\:flx-alignEnd          { .flx-alignEnd; }
+    .@{bpPrefix}\:flx-alignCenter       { .flx-alignCenter; }
+    .@{bpPrefix}\:flx-alignBaseline     { .flx-alignBaseline; }
+    .@{bpPrefix}\:flx-alignStretch      { .flx-alignStretch; }
     
-    .@{bpPrefix}--flx-alignContentStart        { .flx-alignContentStart; }
-    .@{bpPrefix}--flx-alignContentEnd          { .flx-alignContentEnd; }
-    .@{bpPrefix}--flx-alignContentCenter       { .flx-alignContentCenter; }
-    .@{bpPrefix}--flx-alignContentSpaceBetween { .flx-alignContentSpaceBetween; }
-    .@{bpPrefix}--flx-alignContentSpaceAround  { .flx-alignContentSpaceAround; }
-    .@{bpPrefix}--flx-alignContentStretch      { .flx-alignContentStretch; }
+    .@{bpPrefix}\:flx-alignContentStart        { .flx-alignContentStart; }
+    .@{bpPrefix}\:flx-alignContentEnd          { .flx-alignContentEnd; }
+    .@{bpPrefix}\:flx-alignContentCenter       { .flx-alignContentCenter; }
+    .@{bpPrefix}\:flx-alignContentSpaceBetween { .flx-alignContentSpaceBetween; }
+    .@{bpPrefix}\:flx-alignContentSpaceAround  { .flx-alignContentSpaceAround; }
+    .@{bpPrefix}\:flx-alignContentStretch      { .flx-alignContentStretch; }
     
-    .@{bpPrefix}--flx-alignSelfStretch  { .flx-alignSelfStretch; }
-    .@{bpPrefix}--flx-alignSelfStart    { .flx-alignSelfStart; }
-    .@{bpPrefix}--flx-alignSelfEnd      { .flx-alignSelfEnd; }
-    .@{bpPrefix}--flx-alignSelfCenter   { .flx-alignSelfCenter; }
-    .@{bpPrefix}--flx-alignSelfBaseline { .flx-alignSelfBaseline; }
+    .@{bpPrefix}\:flx-alignSelfStretch  { .flx-alignSelfStretch; }
+    .@{bpPrefix}\:flx-alignSelfStart    { .flx-alignSelfStart; }
+    .@{bpPrefix}\:flx-alignSelfEnd      { .flx-alignSelfEnd; }
+    .@{bpPrefix}\:flx-alignSelfCenter   { .flx-alignSelfCenter; }
+    .@{bpPrefix}\:flx-alignSelfBaseline { .flx-alignSelfBaseline; }
 
-    .@{bpPrefix}--flx-justifyStart        { .flx-justifyStart; }
-    .@{bpPrefix}--flx-justifyEnd          { .flx-justifyEnd; }
-    .@{bpPrefix}--flx-justifyCenter       { .flx-justifyCenter; }
-    .@{bpPrefix}--flx-justifySpaceBetween { .flx-justifySpaceBetween; }
-    .@{bpPrefix}--flx-justifySpaceAround  { .flx-justifySpaceAround; }
+    .@{bpPrefix}\:flx-justifyStart        { .flx-justifyStart; }
+    .@{bpPrefix}\:flx-justifyEnd          { .flx-justifyEnd; }
+    .@{bpPrefix}\:flx-justifyCenter       { .flx-justifyCenter; }
+    .@{bpPrefix}\:flx-justifySpaceBetween { .flx-justifySpaceBetween; }
+    .@{bpPrefix}\:flx-justifySpaceAround  { .flx-justifySpaceAround; }
 
-    .@{bpPrefix}--flx-1  { .flx-1; }
-    .@{bpPrefix}--flx-2  { .flx-2; }
-    .@{bpPrefix}--flx-3  { .flx-3; }
-    .@{bpPrefix}--flx-4  { .flx-4; }
-    .@{bpPrefix}--flx-5  { .flx-5; }
-    .@{bpPrefix}--flx-6  { .flx-6; }
-    .@{bpPrefix}--flx-7  { .flx-7; }
-    .@{bpPrefix}--flx-8  { .flx-8; }
-    .@{bpPrefix}--flx-9  { .flx-9; }
-    .@{bpPrefix}--flx-10 { .flx-10; }
+    .@{bpPrefix}\:flx-1  { .flx-1; }
+    .@{bpPrefix}\:flx-2  { .flx-2; }
+    .@{bpPrefix}\:flx-3  { .flx-3; }
+    .@{bpPrefix}\:flx-4  { .flx-4; }
+    .@{bpPrefix}\:flx-5  { .flx-5; }
+    .@{bpPrefix}\:flx-6  { .flx-6; }
+    .@{bpPrefix}\:flx-7  { .flx-7; }
+    .@{bpPrefix}\:flx-8  { .flx-8; }
+    .@{bpPrefix}\:flx-9  { .flx-9; }
+    .@{bpPrefix}\:flx-10 { .flx-10; }
 
 }
 
