--- a/src/less/utilities/spacing-responsive.less
+++ b/src/less/utilities/spacing-responsive.less
@@ -9,68 +9,68 @@
 
         // margin (positive values)
 
-        .@{bpPrefix}--m-@{i}         { margin:        @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-t-@{i}       { margin-top:    @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-r-@{i}       { margin-right:  @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-b-@{i}       { margin-bottom: @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-l-@{i}       { margin-left:   @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-tr-@{i}      { margin-top:    @i * @spacingMultiplicand !important; margin-right:  @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-br-@{i}      { margin-bottom: @i * @spacingMultiplicand !important; margin-right:  @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-bl-@{i}      { margin-bottom: @i * @spacingMultiplicand !important; margin-left:   @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-tb-@{i}      { margin-top:    @i * @spacingMultiplicand !important; margin-bottom: @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-lr-@{i}      { margin-left:   @i * @spacingMultiplicand !important; margin-right:  @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--m-tl-@{i}      { margin-top:    @i * @spacingMultiplicand !important; margin-left:   @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-@{i}         { margin:        @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-t-@{i}       { margin-top:    @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-r-@{i}       { margin-right:  @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-b-@{i}       { margin-bottom: @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-l-@{i}       { margin-left:   @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-tr-@{i}      { margin-top:    @i * @spacingMultiplicand !important; margin-right:  @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-br-@{i}      { margin-bottom: @i * @spacingMultiplicand !important; margin-right:  @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-bl-@{i}      { margin-bottom: @i * @spacingMultiplicand !important; margin-left:   @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-tb-@{i}      { margin-top:    @i * @spacingMultiplicand !important; margin-bottom: @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-lr-@{i}      { margin-left:   @i * @spacingMultiplicand !important; margin-right:  @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:m-tl-@{i}      { margin-top:    @i * @spacingMultiplicand !important; margin-left:   @i * @spacingMultiplicand !important; }
 
         // margin (negative values)
 
-        .@{bpPrefix}--m-neg-@{i}     { margin:        @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-t-neg-@{i}   { margin-top:    @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-r-neg-@{i}   { margin-right:  @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-b-neg-@{i}   { margin-bottom: @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-l-neg-@{i}   { margin-left:   @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-tr-neg-@{i}  { margin-top:    @i * @spacingMultiplicand * -1 !important; margin-right:  @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-br-neg-@{i}  { margin-bottom: @i * @spacingMultiplicand * -1 !important; margin-right:  @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-bl-neg-@{i}  { margin-bottom: @i * @spacingMultiplicand * -1 !important; margin-left:   @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-tb-neg-@{i}  { margin-top:    @i * @spacingMultiplicand * -1 !important; margin-bottom: @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-lr-neg-@{i}  { margin-left:   @i * @spacingMultiplicand * -1 !important; margin-right:  @i * @spacingMultiplicand * -1 !important; }
-        .@{bpPrefix}--m-tl-neg-@{i}  { margin-top:    @i * @spacingMultiplicand * -1 !important; margin-left:   @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-neg-@{i}     { margin:        @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-t-neg-@{i}   { margin-top:    @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-r-neg-@{i}   { margin-right:  @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-b-neg-@{i}   { margin-bottom: @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-l-neg-@{i}   { margin-left:   @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-tr-neg-@{i}  { margin-top:    @i * @spacingMultiplicand * -1 !important; margin-right:  @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-br-neg-@{i}  { margin-bottom: @i * @spacingMultiplicand * -1 !important; margin-right:  @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-bl-neg-@{i}  { margin-bottom: @i * @spacingMultiplicand * -1 !important; margin-left:   @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-tb-neg-@{i}  { margin-top:    @i * @spacingMultiplicand * -1 !important; margin-bottom: @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-lr-neg-@{i}  { margin-left:   @i * @spacingMultiplicand * -1 !important; margin-right:  @i * @spacingMultiplicand * -1 !important; }
+        .@{bpPrefix}\:m-tl-neg-@{i}  { margin-top:    @i * @spacingMultiplicand * -1 !important; margin-left:   @i * @spacingMultiplicand * -1 !important; }
 
         // padding
 
-        .@{bpPrefix}--p-@{i}         { padding:        @i * @spacingMultiplicand!important; }
-        .@{bpPrefix}--p-t-@{i}       { padding-top:    @i * @spacingMultiplicand!important; }
-        .@{bpPrefix}--p-r-@{i}       { padding-right:  @i * @spacingMultiplicand!important; }
-        .@{bpPrefix}--p-b-@{i}       { padding-bottom: @i * @spacingMultiplicand!important; }
-        .@{bpPrefix}--p-l-@{i}       { padding-left:   @i * @spacingMultiplicand!important; }
-        .@{bpPrefix}--p-tr-@{i}      { padding-top:    @i * @spacingMultiplicand!important; padding-right:  @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--p-br-@{i}      { padding-bottom: @i * @spacingMultiplicand!important; padding-right:  @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--p-bl-@{i}      { padding-bottom: @i * @spacingMultiplicand!important; padding-left:   @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--p-tb-@{i}      { padding-top:    @i * @spacingMultiplicand!important; padding-bottom: @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--p-lr-@{i}      { padding-left:   @i * @spacingMultiplicand!important; padding-right:  @i * @spacingMultiplicand !important; }
-        .@{bpPrefix}--p-tl-@{i}      { padding-top:    @i * @spacingMultiplicand!important; padding-left:   @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:p-@{i}         { padding:        @i * @spacingMultiplicand!important; }
+        .@{bpPrefix}\:p-t-@{i}       { padding-top:    @i * @spacingMultiplicand!important; }
+        .@{bpPrefix}\:p-r-@{i}       { padding-right:  @i * @spacingMultiplicand!important; }
+        .@{bpPrefix}\:p-b-@{i}       { padding-bottom: @i * @spacingMultiplicand!important; }
+        .@{bpPrefix}\:p-l-@{i}       { padding-left:   @i * @spacingMultiplicand!important; }
+        .@{bpPrefix}\:p-tr-@{i}      { padding-top:    @i * @spacingMultiplicand!important; padding-right:  @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:p-br-@{i}      { padding-bottom: @i * @spacingMultiplicand!important; padding-right:  @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:p-bl-@{i}      { padding-bottom: @i * @spacingMultiplicand!important; padding-left:   @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:p-tb-@{i}      { padding-top:    @i * @spacingMultiplicand!important; padding-bottom: @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:p-lr-@{i}      { padding-left:   @i * @spacingMultiplicand!important; padding-right:  @i * @spacingMultiplicand !important; }
+        .@{bpPrefix}\:p-tl-@{i}      { padding-top:    @i * @spacingMultiplicand!important; padding-left:   @i * @spacingMultiplicand !important; }
 
     }
     .generate_margin_padding(@responsiveSpacingSteps);
 
     // zero margins
 
-    .@{bpPrefix}--m-0        { .m-0; }
-    .@{bpPrefix}--m-t-0      { .m-t-0; }
-    .@{bpPrefix}--m-r-0      { .m-r-0; }
-    .@{bpPrefix}--m-b-0      { .m-b-0; }
-    .@{bpPrefix}--m-l-0      { .m-l-0; }
+    .@{bpPrefix}\:m-0        { .m-0; }
+    .@{bpPrefix}\:m-t-0      { .m-t-0; }
+    .@{bpPrefix}\:m-r-0      { .m-r-0; }
+    .@{bpPrefix}\:m-b-0      { .m-b-0; }
+    .@{bpPrefix}\:m-l-0      { .m-l-0; }
     
     // auto margins
     
-    .@{bpPrefix}--m-lr-auto { .m-lr-auto; }
+    .@{bpPrefix}\:m-lr-auto { .m-lr-auto; }
     
     // zero paddings
     
-    .@{bpPrefix}--p-0       { .p-0; }
-    .@{bpPrefix}--p-t-0     { .p-t-0; }
-    .@{bpPrefix}--p-r-0     { .p-r-0; }
-    .@{bpPrefix}--p-b-0     { .p-b-0; }
-    .@{bpPrefix}--p-l-0     { .p-l-0; }
+    .@{bpPrefix}\:p-0       { .p-0; }
+    .@{bpPrefix}\:p-t-0     { .p-t-0; }
+    .@{bpPrefix}\:p-r-0     { .p-r-0; }
+    .@{bpPrefix}\:p-b-0     { .p-b-0; }
+    .@{bpPrefix}\:p-l-0     { .p-l-0; }
 
 }
 
