--- a/src/less/utilities/visibility-responsive.less
+++ b/src/less/utilities/visibility-responsive.less
@@ -3,10 +3,10 @@
 /* uncss:ignore start */
 
 .responsive-vis(@bpPrefix) {
-    .@{bpPrefix}--vis-visible { visibility: visible !important; }
-    .@{bpPrefix}--vis-hidden  { visibility: hidden !important; }
-    .@{bpPrefix}--visible     { .mixin-show !important; }
-    .@{bpPrefix}--hidden      { .mixin-hide !important; }
+    .@{bpPrefix}\:vis-visible { visibility: visible !important; }
+    .@{bpPrefix}\:vis-hidden  { visibility: hidden !important; }
+    .@{bpPrefix}\:visible     { .mixin-show !important; }
+    .@{bpPrefix}\:hidden      { .mixin-hide !important; }
 }
 
 // small
