--- a/src/less/utilities/typography-responsive.less
+++ b/src/less/utilities/typography-responsive.less
@@ -4,52 +4,52 @@
 
     // font-size
 
-    .@{bpPrefix}--fs-0 { .fs-0 !important; }
-    .@{bpPrefix}--fs-1 { .fs-1 !important; }
-    .@{bpPrefix}--fs-2 { .fs-2 !important; }
-    .@{bpPrefix}--fs-3 { .fs-3 !important; }
-    .@{bpPrefix}--fs-4 { .fs-4 !important; }
-    .@{bpPrefix}--fs-5 { .fs-5 !important; }
-    .@{bpPrefix}--fs-6 { .fs-6 !important; }
-    .@{bpPrefix}--fs-7 { .fs-7 !important; }
-    .@{bpPrefix}--fs-8 { .fs-8 !important; }
-    .@{bpPrefix}--fs-9 { .fs-9 !important; }
-    .@{bpPrefix}--fs-10 { .fs-10 !important; }
-    .@{bpPrefix}--fs-s { .fs-s !important; }
-    .@{bpPrefix}--fs-xl { .fs-xl !important; }
-    .@{bpPrefix}--fs-xxl { .fs-xxl !important; }
+    .@{bpPrefix}\:fs-0 { .fs-0 !important; }
+    .@{bpPrefix}\:fs-1 { .fs-1 !important; }
+    .@{bpPrefix}\:fs-2 { .fs-2 !important; }
+    .@{bpPrefix}\:fs-3 { .fs-3 !important; }
+    .@{bpPrefix}\:fs-4 { .fs-4 !important; }
+    .@{bpPrefix}\:fs-5 { .fs-5 !important; }
+    .@{bpPrefix}\:fs-6 { .fs-6 !important; }
+    .@{bpPrefix}\:fs-7 { .fs-7 !important; }
+    .@{bpPrefix}\:fs-8 { .fs-8 !important; }
+    .@{bpPrefix}\:fs-9 { .fs-9 !important; }
+    .@{bpPrefix}\:fs-10 { .fs-10 !important; }
+    .@{bpPrefix}\:fs-s { .fs-s !important; }
+    .@{bpPrefix}\:fs-xl { .fs-xl !important; }
+    .@{bpPrefix}\:fs-xxl { .fs-xxl !important; }
 
     // line-height
 
-    .@{bpPrefix}--lh-0 { .lh-0 !important; }
-    .@{bpPrefix}--lh-1 { .lh-1 !important; }
-    .@{bpPrefix}--lh-2 { .lh-2 !important; }
-    .@{bpPrefix}--lh-3 { .lh-3 !important; }
-    .@{bpPrefix}--lh-4 { .lh-4 !important; }
-    .@{bpPrefix}--lh-5 { .lh-5 !important; }
-    .@{bpPrefix}--lh-6 { .lh-6 !important; }
-    .@{bpPrefix}--lh-7 { .lh-7 !important; }
-    .@{bpPrefix}--lh-8 { .lh-8 !important; }
-    .@{bpPrefix}--lh-9 { .lh-9 !important; }
-    .@{bpPrefix}--lh-10 { .lh-10 !important; }
+    .@{bpPrefix}\:lh-0 { .lh-0 !important; }
+    .@{bpPrefix}\:lh-1 { .lh-1 !important; }
+    .@{bpPrefix}\:lh-2 { .lh-2 !important; }
+    .@{bpPrefix}\:lh-3 { .lh-3 !important; }
+    .@{bpPrefix}\:lh-4 { .lh-4 !important; }
+    .@{bpPrefix}\:lh-5 { .lh-5 !important; }
+    .@{bpPrefix}\:lh-6 { .lh-6 !important; }
+    .@{bpPrefix}\:lh-7 { .lh-7 !important; }
+    .@{bpPrefix}\:lh-8 { .lh-8 !important; }
+    .@{bpPrefix}\:lh-9 { .lh-9 !important; }
+    .@{bpPrefix}\:lh-10 { .lh-10 !important; }
 
     // letter spacing
 
-    .@{bpPrefix}--ls-0 { .ls-0 !important; }
-    .@{bpPrefix}--ls-1 { .ls-1 !important; }
-    .@{bpPrefix}--ls-2 { .ls-2 !important; }
-    .@{bpPrefix}--ls-3 { .ls-3 !important; }
-    .@{bpPrefix}--ls-4 { .ls-4 !important; }
+    .@{bpPrefix}\:ls-0 { .ls-0 !important; }
+    .@{bpPrefix}\:ls-1 { .ls-1 !important; }
+    .@{bpPrefix}\:ls-2 { .ls-2 !important; }
+    .@{bpPrefix}\:ls-3 { .ls-3 !important; }
+    .@{bpPrefix}\:ls-4 { .ls-4 !important; }
 
     // text alignment
 
-    .@{bpPrefix}--al-r { .al-r; }
-    .@{bpPrefix}--al-l { .al-l; }
-    .@{bpPrefix}--al-c { .al-c; }
+    .@{bpPrefix}\:al-r { .al-r; }
+    .@{bpPrefix}\:al-l { .al-l; }
+    .@{bpPrefix}\:al-c { .al-c; }
 
     // line-break
 
-    .@{bpPrefix}--lbr-none { .lbr-none; }
+    .@{bpPrefix}\:lbr-none { .lbr-none; }
 
 }
 
