--- a/src/components/icon/icon.less
+++ b/src/components/icon/icon.less
@@ -1,5 +1,11 @@
 /** icon.less */
 
+// TODO:
+// * use inline svg for icons
+// * add mixins for all icons
+// * manipulate them with variables
+// https://stackoverflow.com/questions/10768451/inline-svg-in-css
+
 // block
 // =====
 
