--- a/src/components/note/note.less
+++ b/src/components/note/note.less
@@ -26,25 +26,11 @@
     border-top-right-radius: 0;
 }
 
-// icon
-
-.note .icon {
-
-    left: 1rem;
-    position: absolute;
-    top: .75rem;
-
-    & ~ .note__headline,
-    & ~ .note__body {
-        padding-left: 4.5rem;
-    }
-
-}
-
 // headline
 
 .note__headline {
-    .mixin-h4;
+    .mixin-fs-2;
+    .mixin-lh-3;
     margin: 0 0 .5rem 0;
 }
 
@@ -85,12 +71,6 @@
 
 // modifiers
 // =========
-
-// sizes
-
-.note--large .note__body {
-    font-size: 1.5rem;
-}
 
 // colors
 
