--- a/src/components/flipbuttons/flipbuttons.less
+++ b/src/components/flipbuttons/flipbuttons.less
@@ -23,11 +23,11 @@
     color: @color-base-8;
     cursor: pointer;
     display: block;
-    height: 5rem;
-    margin-top: -2.5rem;
+    height: 3rem;
+    margin-top: -1.5rem;
     position: absolute;
     text-shadow: 0 1px 0 @color-base-25;
-    width: 3rem;
+    width: 2rem;
 
     &:hover {
         background: @color-base-25;
@@ -37,10 +37,10 @@
 
     &::after {
         content: ' ';
-        height: 5rem;
+        height: ~'calc(3rem - 2px)';
         left: 0;
         position: absolute;
-        width: 3.2rem;
+        width: 2rem;
     }
 
 }
@@ -49,7 +49,7 @@
 
     border-radius: (@defaultBorderRadius * 1px) 0 0 (@defaultBorderRadius * 1px);
     border-right: 0;
-    left: -3rem;
+    left: -2rem;
 
     &::after {
         .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-8);
@@ -61,7 +61,7 @@
 
     border-radius: 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0;
     border-left: 0;
-    right: -3rem;
+    right: -2rem;
 
     &::after {
         .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-8);
@@ -73,18 +73,18 @@
 
 .flipButtons__buttonPrev.is--disabled,
 .flipButtons__buttonNext.is--disabled {
-    
+
     &:hover {
         background: transparent;
         cursor: default;
     }
-    
+
     // icons
-    
+
     &::after {
         opacity: .3;
     }
-    
+
 }
 
 // modifiers
