--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -4,23 +4,23 @@
 // =====
 
 .modal {
-    
+
     .mixin-defaultBorderRadius;
     background: @color-white;
     border: @color-base-23 1px solid;
     box-sizing: border-box;
     position: relative;
     text-align: left;
-    width: 60rem;
-    
+    width: 37.5rem;
+
     .modal__container & {
         .mixin-shadow-4;
         border: 0;
         left: 50%;
-        margin-left: -30rem;
+        margin-left: -18.75rem;
         position: absolute;
     }
-    
+
 }
 
 // elements
@@ -29,23 +29,22 @@
 .modal__header {
     border-bottom: @color-base-24 1px solid;
     border-radius: (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0 0;
-    margin: 0 0 1rem 0;
-    padding: 0 1rem;
+    margin: 0 0 .5rem 0;
+    padding: 0 .5rem;
 }
 
 .modal__title {
+    .mixin-fs-2;
+    .mixin-fw-bold;
     color: @color-base-8;
-    font-family: @font-sansserif;
-    font-size: 1.5rem;
-    font-weight: bold;
-    line-height: 4.5rem;
+    line-height: 2.5rem;
 }
 
 .modal__body {
     .mixin-clearfix;
-    font-size: 1.5rem;
-    line-height: 2.5rem;
-    padding: 0 1rem;
+    .mixin-fs-2;
+    .mixin-lh-3;
+    padding: 0 .5rem;
 }
 
 .modal__body:last-child {
@@ -55,8 +54,8 @@
 .modal__footer {
     .mixin-clearfix;
     border-top: @color-base-24 1px solid;
-    margin-top: 1rem;
-    padding: 1rem;
+    margin-top: .5rem;
+    padding: .5rem;
     overflow: hidden;
 }
 
@@ -76,32 +75,32 @@
 
 .modal .buttonDismiss {
     position: absolute;
-    right: .5rem;
-    top: .5rem;
+    right: .25rem;
+    top: .25rem;
 }
 
 // modifiers
 // =========
 
 .modal--small {
-    
-    width: 30rem;
-    
+
+    width: 18.75rem;
+
     .modal__container & {
-        margin-left: -15rem;
+        margin-left: -9.38rem;
     }
-    
+
 }
 
 .modal--simple {
-    
+
     .modal__title {
         display: none;
     }
-    
+
     .modal__body {
         border: 0;
-        padding: 3rem;
+        padding: 2rem;
     }
-    
+
 }
