--- a/src/components/pagedots/pagedots.less
+++ b/src/components/pagedots/pagedots.less
@@ -6,10 +6,10 @@
 .pageDots {
     .mixin-userSelectNone;
     background: @color-white;
-    border-radius: 1.2rem;
+    border-radius: .75rem;
     display: inline-block;
     font-size: 0;
-    height: 2.5rem;
+    height: 1.5rem;
     margin: 0 auto;
     text-align: center;
     z-index: 20;
@@ -31,21 +31,21 @@
     &::after {
         content: ' ';
         display: inline-block;
-        height: 2.5rem;
-        width: 2rem;
+        height: 1.5rem;
+        width: 1.5rem;
     }
 
 }
 
 .pageDots__dot {
-    height: 2.5rem;
-    width: 2rem;
+    height: 1.5rem;
+    width: 1.5rem;
 }
 
 .pageDots__buttonPrev,
 .pageDots__buttonNext {
-    height: 2.5rem;
-    width: 3rem;
+    height: 1.5rem;
+    width: 2rem;
 }
 
 // dot icon
