--- a/src/components/rangeinput/rangeinput.less
+++ b/src/components/rangeinput/rangeinput.less
@@ -10,15 +10,15 @@
     }
 
     label {
-        margin-bottom: .5rem;
+        margin-bottom: .25rem;
     }
 
     input[type="text"] {
-        margin-bottom: 1rem;
+        margin-bottom: .5rem;
     }
 
     input[type="submit"] {
-        margin-top: 1rem;
+        margin-top: .5rem;
         text-align: center;
         width: 100%;
     }
@@ -32,7 +32,7 @@
 
     .mixin-userSelectNone;
     cursor: default;
-    height: 4.5rem;
+    height: 3rem;
     position: relative;
 
     // track & range indicator
@@ -40,8 +40,8 @@
     .rangeInput__track {
         .mixin-defaultBorderRadius;
         background: @color-base-24;
-        bottom: 1rem;
-        height: .4rem;
+        bottom: .5rem;
+        height: .25rem;
         left: 0;
         overflow: hidden;
         position: absolute;
@@ -51,7 +51,7 @@
 
     .rangeInput__range {
         background: @color-base-10;
-        height: .4rem;
+        height: .25rem;
         left: 0;
         position: absolute;
         right: 0;
@@ -68,13 +68,13 @@
     .rangeInput__knob {
         background: @color-base-10;
         border-radius: 50%;
-        bottom: .1rem;
+        bottom: 0;
         box-sizing: border-box;
         cursor: ew-resize;
-        height: 2rem;
+        height: 1.5rem;
         position: absolute;
         transition: left 200ms ease-out;
-        width: 2rem;
+        width: 1.5rem;
         z-index: 2;
     }
 
