--- a/src/components/stepper/stepper.less
+++ b/src/components/stepper/stepper.less
@@ -7,19 +7,19 @@
 
     .mixin-userSelectNone;
     .mixin-defaultBorderRadius;
-    background: linear-gradient(to bottom, @color-base-12, @color-base-10);
-    border: @color-base-8 1px solid;
+    background: linear-gradient(to bottom, @color-base-12, @color-base-11);
+    border: @color-base-9 1px solid;
     box-shadow: 0 1px 0 @color-base-13 inset;
     box-sizing: border-box;
     color: @color-base-25;
     display: inline-block;
     font-size: 0;
-    height: 4rem;
+    height: 2.5rem;
     margin: 0;
     position: relative;
     
     &:hover {
-        background: linear-gradient(to bottom, @color-base-10, @color-base-8);
+        background: linear-gradient(to bottom, @color-base-13, @color-base-8);
         border-color: @color-base-5;
     }
 
@@ -28,27 +28,10 @@
 // elements
 // ========
 
-// optional icon
+// up & down icons
 
-.stepper .icon {
-
-    filter: drop-shadow(0 -1px 0 @color-base-10);
-    margin: .3rem .5rem;
-    position: absolute;
-    right: 0;
-    top: 0;
-
-    circle, ellipse, path, polygon {
-        fill: @color-white;
-    }
-
-}
-
-// minus & plus icons
-
-.stepper__iconMinus,
-.stepper__iconPlus {
-    filter: drop-shadow(0 -1px 0 @color-base-10);
+.stepper__iconDown,
+.stepper__iconUp {
     height: 100%;
     left: 0;
     position: absolute;
@@ -60,38 +43,40 @@
 // input
 
 .stepper__input.stepper__input {
+    .mixin-fs-3;
     border: 0;
     display: inline-block;
-    font-size: 2rem;
-    height: 3.2rem;
-    margin: .3rem;
+    height: 2rem;
+    line-height: 2rem;
+    margin: .2rem;
     outline: 0;
     padding: 0;
     text-align: center;
     vertical-align: top;
-    width: 6rem;
+    width: 3.75rem;
 }
 
 .js .stepper__input {
-    margin-left: 3rem
+    margin-left: 2rem
 }
 
 // submit
 
 .stepper__submit {
 
+    .mixin-fs-2;
+    .mixin-fw-bold;
     background: transparent;
     border: 0;
     box-sizing: border-box;
     color: @color-base-25;
     cursor: pointer;
     display: inline-block;
-    font: bold 1.5rem/3.8rem @font-sansserif;
+    line-height: 2.25rem;
     outline: 0;
-    padding: 0 1.5rem 0 1rem;
+    padding: 0 1rem 0 .5rem;
     position: relative;
     text-align: center;
-    text-shadow: 0 -1px 0 @color-base-7;
     vertical-align: top;
     z-index: 2;
 
@@ -101,175 +86,89 @@
         opacity: 0;
         overflow: hidden;
         padding: 0;
-        width: 4rem;
+        width: 1.5rem;
     }
 
 }
 
 .icon + .stepper__submit {
-    padding-right: 4rem;
+    padding-right: 2rem;
 }
 
 // minus & plus button
 
-.stepper__buttonMinus,
-.stepper__buttonPlus {
+.stepper__buttonDown,
+.stepper__buttonUp {
 
-    background: linear-gradient(to bottom, @color-base-17, @color-base-14);
     border: 0;
-    box-shadow: 0 1px 0 @color-base-20 inset;
     cursor: pointer;
-    height: 1.9rem;
+    height: 1.19rem;
     left: 0;
     position: absolute;
-    width: 2.5rem;
+    width: 1.75rem;
     z-index: 2;
 
     &:hover {
-        background: linear-gradient(to bottom, @color-base-16, @color-base-13);
-        box-shadow: 0 1px 0 @color-base-19 inset;
+        background: @color-base-16;
     }
 
     &:active {
-        background: linear-gradient(to bottom, @color-base-11, @color-base-14);
-        box-shadow: none;
+        background: @color-base-16;
     }
 
     &:focus {}
 
 }
 
-.stepper__buttonMinus {
+.stepper__buttonDown {
     border-radius: 0 0 0 (@defaultBorderRadius * 1px);
     bottom: 0;
 }
 
-.stepper__iconMinus {
+.stepper__iconDown {
     .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-23, @width: 24, @height: 24);
 }
 
-.stepper__buttonPlus {
+.stepper__buttonUp {
     border-radius: (@defaultBorderRadius * 1px) 0 0 0;
     top: 0;
 }
 
-.stepper__iconPlus {
+.stepper__iconUp {
     .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-23, @width: 24, @height: 24);
 }
 
 // modifiers
 // =========
 
-.stepper--light {
-
-    background: @color-white;
-    border-color: @color-base-23;
-    box-shadow: none;
-
-    &:hover {
-        background: @color-white;
-        border-color: @color-base-22;
-    }
-
-    .icon {
-
-        filter: none;
-
-        circle, ellipse, path, polygon {
-            fill: @color-base-8;
-        }
-
-    }
-
-    .stepper__icon {
-        filter: none;
-    }
-
-    .stepper__input {
-        background: @color-base-24;
-        box-shadow: none;
-    }
-
-    .stepper__input.stepper__input,
-    .stepper__input.stepper__input:hover,
-    .stepper__input.stepper__input:focus {
-        box-shadow: none;
-    }
-
-    .stepper__submit {
-        text-shadow: none;
-        color: @color-base-8;
-    }
-
-    .stepper__buttonMinus,
-    .stepper__buttonPlus {
-
-        background: transparent;
-        box-shadow: none;
-
-        &:hover {
-            background: @color-base-24;
-        }
-
-        &:focus {}
-
-    }
-
-    .stepper__iconMinus {
-        .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-10, @width: 24, @height: 24);
-    }
-
-    .stepper__iconPlus {
-        .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-10, @width: 24, @height: 24);
-    }
-
-}
-
 .stepper--touch {
 
-    .stepper__input.stepper__input {
-        width: 4.5rem;
-        height: 3.2rem;
-    }
-
     .js & .stepper__input {
-        margin-left: 8.6rem;
+        margin-left: 5.25rem;
     }
 
-    .stepper__buttonMinus,
-    .stepper__buttonPlus {
+    .stepper__buttonDown,
+    .stepper__buttonUp {
         border-radius: 0;
-        height: 3.8rem;
+        height: ~'calc(2.5rem - 2px)';
         top: 0;
-        width: 4rem;
+        width: 2.5rem;
     }
 
-    .stepper__buttonMinus {
-        left: 4.1rem;
+    .stepper__buttonDown {
+        left: 2.5rem;
     }
 
-    .stepper__buttonPlus {
+    .stepper__buttonUp {
         left: 0;
     }
 
-    .stepper__iconMinus {
+    .stepper__iconDown {
         .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-23);
     }
 
-    .stepper__iconPlus {
+    .stepper__iconUp {
         .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-23);
-    }
-
-    &.stepper--light {
-
-        .stepper__iconMinus {
-            .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-10);
-        }
-
-        .stepper__iconPlus {
-            .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-10);
-        }
-
     }
 
 }
