--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -104,7 +104,7 @@
                         inputSelector: '#docsearch-input',
                         debug: false
                     });
-                } catch {
+                } catch(e) {
                     // fail silently
                 }
 
