--- a/src/components/stepper/stepper.less
+++ b/src/components/stepper/stepper.less
@@ -126,7 +126,7 @@
 }
 
 .stepper__iconDown {
-    .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-23, @width: 24, @height: 24);
+    .mixin-icon-chevron-down(@color: @color-base-23);
 }
 
 .stepper__buttonUp {
@@ -135,7 +135,7 @@
 }
 
 .stepper__iconUp {
-    .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-23, @width: 24, @height: 24);
+    .mixin-icon-chevron-up(@color: @color-base-23);
 }
 
 // modifiers
@@ -164,11 +164,11 @@
     }
 
     .stepper__iconDown {
-        .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-23);
+        .mixin-icon-chevron-down(@color: @color-base-23, @size: 32);
     }
 
     .stepper__iconUp {
-        .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-23);
+        .mixin-icon-chevron-up(@color: @color-base-23, @size: 32);
     }
 
 }
