--- a/src/less/yoi.less
+++ b/src/less/yoi.less
@@ -8,6 +8,7 @@
 
 @import "config/breakpoints.less";
 @import "config/colors.less";
+@import "config/icons.less";
 @import "config/options.less";
 @import "config/typography.less";
 
